ace-openshift-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appconnect
  labels:
    app: appconnect
spec:
  replicas: 3
  selector:
    matchLabels:
      app: appconnect
  template:
    metadata:
      labels:
        app: appconnect
    spec:
      serviceAccount: icamargo
      containers:
      - name: appconnect
        image: us.gcr.io/sincere-chariot-260312/acewithbar@sha256:2fd78a8432cbfaf1ea7d73d24d00b93cd90fe6e9fc7bb9a4f8e8606ef8a05fd1
        ports:
        - containerPort: 7600
          name: xaaa2
        - containerPort: 7800
          name: yeee2
        - containerPort: 7843
          name: ziii2
        - containerPort: 1414
          name: aooo2
        - containerPort: 9483
          name: staticsace
        - containerPort: 9157
          name: staticsmq
        - containerPort: 4414
          name: webbroker 
        securityContext:
          privileged: true
        resources:
          requests:
            memory: "512Mi"
            cpu: "250m"
          limits:
            memory: "1024Mi"
            cpu: "500m"
        #command: ["echo"]
        #args: ["$(LICENSE) $(MQ_QMGR_NAME) $(ACE_SERVER_NAME)"]
