ace-gke-deployment-icbs.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: icbs
  labels:
    app: icbs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: icbs
  template:
    metadata:
      labels:
        app: icbs
    spec:
      containers:
      - name: icbs
        image: us.gcr.io/sincere-chariot-260312/ace11007mq9003icbsosv9@sha256:0659383a2269f641e37a828b787cea005e5a9caaa99a7317899df33324db1d84
        ports:
        - containerPort: 7600
          name: adminace
        - containerPort: 7800
          name: listenerace
        - containerPort: 7801
          name: listenerace2
        - containerPort: 7843
          name: sslport
        - containerPort: 1414
          name: mqport
        - containerPort: 9483
          name: staticsace
        - containerPort: 9157
          name: staticsmq
        - containerPort: 4414
          name: webbroker 
        - containerPort: 11883
          name: metricasace
        resources:
          requests:
            memory: "512Mi"
            cpu: "250m"
          limits:
            memory: "1024Mi"
            cpu: "500m"

---

kind: Service
apiVersion: v1
metadata:
  name: icbs
spec:
  type: LoadBalancer
  selector:
    app: icbs
  ports:
  - name: adminace
    port: 7600
    targetPort: 7600
  - name: listenerace
    port: 7800
    targetPort: 7800
  - name: sslport
    port: 7843
    targetPort: 7843
  - name: mqport
    port: 1414
    targetPort: 1414
  - name: staticsace
    port: 9483
    targetPort: 9483
  - name: staticsmq
    port: 9157
    targetPort: 9157
  - name: webbroker
    port: 4414
    targetPort: 4414
  - name: listenerace2
    port: 7801
    targetPort: 7801
  - name: metricasace
    port: 11883
    targetPort: 11883
        #command: ["echo"]
        #args: ["$(LICENSE) $(MQ_QMGR_NAME) $(ACE_SERVER_NAME)"]
