ace-openshift-deployment-bancamovil.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bancamovil
  labels:
    app: bancamovil
spec:
  replicas: 3
  selector:
    matchLabels:
      app: bancamovil
  template:
    metadata:
      labels:
        app: bancamovil
    spec:
      serviceAccount: saibmcolombia
      containers:
      - name: bancamovil
        image: us.gcr.io/sincere-chariot-260312/acebancamovil110007v2@sha256:d3d4ba22b04e0234164db95df9f389cfb576d0f5bc46107946ac97ee0714551e
        ports:
        - containerPort: 7600
          name: adminace
        - containerPort: 7800
          name: listenerace
        - containerPort: 7801
          name: listenerace2
        - containerPort: 7843
          name: sslport
        - containerPort: 1414
          name: mqport
        - containerPort: 9483
          name: staticsace
        - containerPort: 9157
          name: staticsmq
        - containerPort: 4414
          name: webbroker 
        - containerPort: 11883
          name: metricasace
        securityContext:
          privileged: true
        resources:
          requests:
            memory: "512Mi"
            cpu: "250m"
          limits:
            memory: "1024Mi"
            cpu: "500m"

---

kind: Service
apiVersion: v1
metadata:
  name: bancamovil
spec:
  type: LoadBalancer
  selector:
    app: bancamovil
  ports:
  - name: adminace
    port: 7600
    targetPort: 7600
  - name: listenerace
    port: 7800
    targetPort: 7800
  - name: sslport
    port: 7843
    targetPort: 7843
  - name: mqport
    port: 1414
    targetPort: 1414
  - name: staticsace
    port: 9483
    targetPort: 9483
  - name: staticsmq
    port: 9157
    targetPort: 9157
  - name: webbroker
    port: 4414
    targetPort: 4414
  - name: listenerace2
    port: 7801
    targetPort: 7801
  - name: metricasace
    port: 11883
    targetPort: 11883
        #command: ["echo"]
        #args: ["$(LICENSE) $(MQ_QMGR_NAME) $(ACE_SERVER_NAME)"]
