ace-openshift-mysql-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: mysql
spec:
  type: LoadBalancer
  selector:
    app: mysql
  ports:
  - name: mysql
    port: 3306
    targetPort: 3306
