ace-openshift-icbs-route.yaml
apiVersion: v1
kind: Route
metadata:
  name: no-route-hostname
spec:
  to:
    kind: Service
    name: bancamovil
  port:
    targetPort: 7600

apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: bancamovil
  name: ConsultaSaldos
spec:
    path: "/ConsultaSaldos" 
    port:
      targetPort: 7600
    to:
    kind: Service
    name: bancamovil

apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: adminbroker
spec:
    name: consultasaldos
    path: "/ConsultaSaldos" 
    port:
      targetPort: 4414
    to:
     kind: Service
     name: bancamovil

apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: adminbroker
spec:
    name: consultasaldos
    port:
      targetPort: 4414
    to:
     kind: Service
     name: bancamovil

apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: consultasaldos
spec:
    name: consultasaldos
    path: "/consultasaldos" 
    port:
      targetPort: 7800
    to:
     kind: Service
     name: bancamovil


apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: abonocuenta
spec:
    name: consultasaldos
    path: "/AbonoCuenta" 
    port:
      targetPort: 7800
    to:
     kind: Service
     name: bancamovil
